--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "author": "immanuel toby",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
